# energy-effects-T2K

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  sphinx.yml  test.yaml
data/: ccqe_energy_res.csv  neutrino_ccqe.csv  t2kflux_2020_plus250kA_nominal_sk.csv  t2kflux_2020_plus250kA_runcond_sk.csv
data/T2Kflux2020/t2kflux_2020_public_release/: t2kflux_2020_minus250kA_nominal_nd280.txt  t2kflux_2020_minus250kA_nominal_sk.txt  t2kflux_2020_minus250kA_runcond_nd280.txt  t2kflux_2020_minus250kA_runcond_sk.txt  t2kflux_2020_plus250kA_nominal_nd280.txt  t2kflux_2020_plus250kA_nominal_sk.txt  t2kflux_2020_plus250kA_runcond_nd280.txt  t2kflux_2020_plus250kA_runcond_sk.txt
doc/source/: api.rst
doc/source/_autosummary/: src.nu_osc.default_parameters.MASS_ELECTRON.rst  src.nu_osc.default_parameters.NUM_DENSITY_E_EARTH_CRUST.rst  src.nu_osc.default_parameters.rst  src.nu_osc.hamiltonians.psi_roots.rst  src.nu_osc.hamiltonians.rst  src.nu_osc.osc_prob.multiline.rst
doc_ext/: 20240619_boistier_irfu.odp  Masque-de-presentation-Poppins-PPTX.odp
docs/: requirements.txt
docs/source/: conf.py  refs.bib
docs/source/_autosummary/: src.energy_effects_t2k.convolution.energyimport.rst  src.nu_osc.default_parameters.CONV_CM2_TO_BARN.rst  src.nu_osc.default_parameters.CONV_G_TO_EV.rst  src.nu_osc.default_parameters.CONV_INV_EV_TO_CM.rst  src.nu_osc.default_parameters.CONV_KM_TO_INV_EV.rst  src.nu_osc.default_parameters.ELECTRON_FRACTION_EARTH_CRUST.rst  src.nu_osc.default_parameters.GF.rst  src.nu_osc.default_parameters.MASS_NEUTRON.rst  src.nu_osc.default_parameters.MASS_PROTON.rst  src.nu_osc.default_parameters.NEG_HALF_SQRT3_INV.rst  src.nu_osc.default_parameters.NUFIT.rst  src.nu_osc.default_parameters.SQRT3.rst  src.nu_osc.default_parameters.SQRT3_INV.rst  src.nu_osc.default_parameters.rst  src.nu_osc.hamiltonians.evolution_operator_3nu.rst  src.nu_osc.hamiltonians.evolution_operator_3nu_u_coefficients.rst  src.nu_osc.hamiltonians.hamiltonian_3nu_coefficients.rst  src.nu_osc.hamiltonians.rst  src.nu_osc.osc_prob.K.rst  (+9 more)
src/energy_effects_t2k/: convolution.py
src/nu_osc/: default_parameters.py  hamiltonians.py  osc_prob.py
(+14 files in other folders)
